# ngsoftfm-web

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  main.cpp  ngsoftfm.sln
build-ucrt64/: CMakeCache.txt  Makefile  cmake_install.cmake
build_msys2/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: RELEASE.md
include/: AudioOutput.h  FmDecode.h  MovingAverage.h  SoftFM.h  fastatan2.h
scripts/: Install-HlsJs.ps1  Make-Release.ps1  Start-FMStream-Native.ps1  Start-FMStream.ps1  Start-KikuFM.bat  Start-NgSoftFmWeb.bat  Start-Web.ps1  stream_fm_http.sh
sfmbase/: AudioOutput.cpp  BladeRFSource.cpp  FmDecode.cpp  RtlSdrSource.cpp
web/NgSoftFmWeb/: Program.cs
web/NgSoftFmWeb/Properties/: launchSettings.json
web/NgSoftFmWeb/wwwroot/: index.html
